# hls_GraphMe

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  gpm_directives.tcl  hls_config.cfg  host  host.cpp  my_kernel.xclbin.info  run.tcl  set_int_kernel.xo  todo.md
.ipcache/0/2/02cb82545e2cc8a2/: 02cb82545e2cc8a2.xci  ulp_m00_regslice_0.dcp  ulp_m00_regslice_0_sim_netlist.v  ulp_m00_regslice_0_sim_netlist.vhdl  ulp_m00_regslice_0_stub.v  ulp_m00_regslice_0_stub.vhdl
.ipcache/0/7/0710d5d66cbaa553/: 0710d5d66cbaa553.xci  bd_85ad_vip_S01_0.dcp  bd_85ad_vip_S01_0_sim_netlist.v  bd_85ad_vip_S01_0_sim_netlist.vhdl  bd_85ad_vip_S01_0_stub.v  bd_85ad_vip_S01_0_stub.vhdl  stats.txt
.ipcache/0/9/094d3b680f2af6b1/: 094d3b680f2af6b1.xci  bd_22c0_frequency_counter_aclk_kernel_00_0.dcp  bd_22c0_frequency_counter_aclk_kernel_00_0_sim_netlist.v  bd_22c0_frequency_counter_aclk_kernel_00_0_sim_netlist.vhdl  bd_22c0_frequency_counter_aclk_kernel_00_0_stub.v  bd_22c0_frequency_counter_aclk_kernel_00_0_stub.vhdl  stats.txt
.ipcache/0/9/09b574992f2176a6/: 09b574992f2176a6.xci  (+4 more)
dataset/: rectangle.txt  simple.txt  triangle.txt  wiki-vote_input.txt
hls/: graph.cpp  graph.h  set_intersect.cpp  set_intersect.h  testbench.cpp
host/: cpu_main.cpp  graph_loader.h  main.cpp
host_file/: graph_loader.cpp  testbench.cpp
include/: bcsr.h  config.h  graph.h  set_intersect.h  types.h
src/: asd.cpp  bcsr.cpp  bcsr.h  common.cpp  common.h  gpm_kernel.cpp  graph.cpp  graph.h  graph_loader.cpp  graph_loader.h  kernel.cpp  main.cpp  schedule.cpp  set_intersect.cpp
(+458 files in other folders)
